замена препроцессора на sass

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <header>
       <nav class="main-nav">
         <a href="index.html" class="logo-link">
-          <img src="img/logo" width="" height="" alt="GllacyShop логотип">
+          <img src="img/logo.svg" width="154" height="64" alt="GllacyShop логотип">
         </a>
         <ul class="menu">
           <li> <a class="menu__link">Каталог</a>
@@ -102,8 +102,8 @@
             </div>
           </div>
 
-          <div class="flat">
-            <b class="flat__title">Жирность:</b>
+          <fieldset class="flat">
+            <legend class="flat__title">Жирность:</legend>
             <div class="flat__wrapper">
               <p class="flat__inner">
                 <input type="radio" name="flat" id="zero">
@@ -122,10 +122,10 @@
                 <label for="more">до 0%</label>
               </p>
             </div>
-          </div>
+          </fieldset>
 
-          <div class="topping">
-            <b class="topping__title">Наполнитель:</b>
+          <fieldset class="topping">
+            <legend class="topping__title">Наполнитель:</legend>
             <div class="topping__wrapper">
               <p class="topping__inner">
                 <input type="checkbox" name="chocolate" id="chocolate">
@@ -151,7 +151,7 @@
                 <input type="checkbox" name="jam" id="jam">
                 <label for="jam">джемы</label>
               </p>
-            </div>
+            </fieldset>
           </div>
           <button type="submit">Применить</button>
         </form>
@@ -166,7 +166,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <img src="img/cream_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -180,7 +180,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочно-кофейное с кусочками шоколада">
+                <img src="img/cream_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -194,7 +194,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <img src="img/cream_3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -208,7 +208,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img src="img/cream_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -222,7 +222,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочное с брусничным джемом">
+                <img src="img/cream_5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -236,7 +236,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочно-черничное с цельными ягодами черники">
+                <img src="img/cream_6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -250,7 +250,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочно-лимонное с карамельной присыпкой">
+                <img src="img/cream_7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -264,7 +264,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочное с шоколадной стружкой">
+                <img src="img/cream_8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -278,7 +278,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочно-ванильное с кусочками шоколада">
+                <img src="img/cream_9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -292,7 +292,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочноe с ментоловым сиропом">
+                <img src="img/cream_10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -306,7 +306,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочное с кусочками черного шоколада">
+                <img src="img/cream_11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -320,7 +320,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочное с мятным сиропом">
+                <img src="img/cream_12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -363,7 +363,7 @@
       </section>
 
       <p class="footer__copyright">
-        <img class="footer__copyright-img" src="" alt="HTML Academy">
+        <img class="footer__copyright-img" src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy">
         <b class="footer__copyright-text">Сделано в <a class="footer__copyright-link">HTML Academy</a> &copy; 2017</b>
       </p>
     </footer>
