--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="ru">
   <head>
     <title>Gllacy Shop</title>
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
   </head>
   <body>
-    <header>
-      <nav class="main-nav">
-        <a class="logo-link">
-          <img src="img/logo" width="" height="" alt="GllacyShop логотип">
+    <header class="main-header">
+      <a class="main-header__logo">
+          <img src="img/logo.svg" width="154" height="64" alt="GllacyShop логотип">
         </a>
-        <ul class="menu">
+      <nav class="menu">
+        <ul class="menu__list">
           <li> <a class="menu__link">Каталог</a>
             <ul class="menu__sub">
               <li><a class="menu__sub-link" href="#">Новинки</a></li>
@@ -26,9 +25,9 @@
           <li><a class="menu__link" href="#">О компании</a></li>
         </ul>
       </nav>
-      <div class="user-navigation">
-        <a class="search-icon" href="#">Перейти на форму поиска по сайту</a>
-        <section class="user-search">
+      <div class="user-nav">
+        <a class="user-nav__login" href="#">Перейти на форму поиска по сайту</a>
+        <section class="modal  modal-search">
           <h2 class="visually-hidden">Поиск по сайту</h2>
           <form action="#" method="get">
             <label for="user-search">Поиск</label>
@@ -36,8 +35,8 @@
             <button type="submit">Искать</button>
           </form>
         </section>
-        <a class="user-login-link" href="#">Вход в личный кабинет</a>
-        <section class="user-login">
+        <a class="user-nav__login" href="#">Вход в личный кабинет</a>
+        <section class="modal modal-login">
           <h2 class="visually-hidden">Вход в личный кабинет</h2>
           <form action="#" method="post">
             <label for="login-email">Введите электронную почту</label>
@@ -49,7 +48,7 @@
             <a href="#">Новая регистрация</a>
           </form>
         </section>
-        <a href="#" class="user-shopping-cart">Корзина</a>
+        <a href="#" class="user-nav__cart">Корзина</a>
       </div>
       <section class="reference-information">
         <h2 class="visually-hidden">Информация о магазине</h2>
@@ -109,7 +108,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <img src="img/cream_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -123,7 +122,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочно-кофейное с кусочками шоколада">
+                <img src="img/cream_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -137,7 +136,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <img src="img/cream_3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -151,7 +150,7 @@
             </h3>
             <p class="ice-cream__img">
               <a class="ice-cream__img-link" href="" >
-                <img src="" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img src="img/cream_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               </a>
             </p>
             <p class="ice-cream__price">
@@ -205,7 +204,7 @@
 
       <div class="contacts">
         <div class="contacts__map" id="interactive-map">
-          <img src="" alt="карта">
+          <img src="img/map.png" width="1200" height="430" alt="карта">
         </div>
 
         <section class="contacts__company">
@@ -245,7 +244,7 @@
       </section>
 
       <p class="footer__copyright">
-        <img class="footer__copyright-img" src="" alt="HTML Academy">
+        <img class="footer__copyright-img" src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy">
         <b class="footer__copyright-text">Сделано в <a class="footer__copyright-link">HTML Academy</a> &copy; 2017</b>
       </p>
     </footer>
